--- a/openstack_user_config.yml
+++ b/openstack_user_config.yml
@@ -11,8 +11,10 @@ used_ips:
   - "172.29.248.1,172.29.248.50"
 
 global_overrides:
+  # The internal and external VIP should be different IPs, however they
+  # do not need to be on separate networks.
+  external_lb_vip_address: 172.29.236.10
   internal_lb_vip_address: 172.29.236.11
-  external_lb_vip_address: 172.29.236.5
   tunnel_bridge: "br-vxlan"
   management_bridge: "br-mgmt"
   provider_networks:
@@ -35,6 +37,15 @@ global_overrides:
         type: "vxlan"
         range: "1:1000"
         net_name: "vxlan"
+        group_binds:
+          - neutron_linuxbridge_agent
+    - network:
+        container_bridge: "br-vlan"
+        container_type: "veth"
+        container_interface: "eth11"
+        type: "vlan"
+        range: "1:1"
+        net_name: "vlan"
         group_binds:
           - neutron_linuxbridge_agent
     - network:
