--- a/user_variables.yml
+++ b/user_variables.yml
@@ -3,4 +3,8 @@
 # which may need to be set for a production environment.
 
 ## OpenStack public endpoint protocol
-openstack_service_publicuri_proto: http
+haproxy_keepalived_external_vip_cidr: "192.168.50.69/24" 
+haproxy_keepalived_internal_vip_cidr: "172.29.236.11/22" 
+haproxy_keepalived_external_interface: eth1 
+haproxy_keepalived_internal_interface: br-mgmt
+
