--- a/user_variables.yml
+++ b/user_variables.yml
@@ -5,6 +5,6 @@
 ## OpenStack public endpoint protocol
 haproxy_keepalived_external_vip_cidr: "192.168.50.69/24" 
 haproxy_keepalived_internal_vip_cidr: "172.29.236.11/22" 
-haproxy_keepalived_external_interface: eth1 
+haproxy_keepalived_external_interface: br-vlan
 haproxy_keepalived_internal_interface: br-mgmt
 
