Wrong copy/paste of DNS search field.

--- a/playbook-network-storage1.yml
+++ b/playbook-network-storage1.yml
@@ -11,7 +11,7 @@
       - '8.8.8.8'
       - '8.8.4.4'
     dns_search:
-      - '172.29.236.1'
+      - 'openstack'
     network_interfaces:
       - name: 'eth0'
         configure: true
