--- a/openstack_user_config.yml
+++ b/openstack_user_config.yml
@@ -42,18 +42,8 @@ global_overrides:
         container_bridge: "br-vlan"
         container_type: "veth"
         container_interface: "eth12"
-        host_bind_override: "eth12"
         type: "flat"
         net_name: "flat"
-        group_binds:
-          - neutron_linuxbridge_agent
-    - network:
-        container_bridge: "br-vlan"
-        container_type: "veth"
-        container_interface: "eth11"
-        type: "vlan"
-        range: "1:1"
-        net_name: "vlan"
         group_binds:
           - neutron_linuxbridge_agent
     - network:
@@ -67,6 +57,17 @@ global_overrides:
           - cinder_api
           - cinder_volume
           - nova_compute
+
+
+    # - network:
+    #     container_bridge: "br-vlan"
+    #     container_type: "veth"
+    #     container_interface: "eth11"
+    #     type: "vlan"
+    #     range: "1:1"
+    #     net_name: "vlan"
+    #     group_binds:
+    #       - neutron_linuxbridge_agent
 
 ###
 ### Infrastructure
